--- a/views/room.hbs
+++ b/views/room.hbs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script>
-    const roomId = "<%= roomId %>";
+    window.roomId = "{{roomId}}";
   </script>
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js" defer></script>
   <script src="/socket.io/socket.io.js" defer></script>
