--- a/views/room.hbs
+++ b/views/room.hbs
@@ -12,6 +12,7 @@
   <script src="/socket.io/socket.io.js" defer></script>
   <script src="/script.js" defer></script>
   <style>
+    body {background-color: black;}
     #video-grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, 300px);
